--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.6.5",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
+    "react-device-frameset": "^1.3.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
